--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +12,29 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form-card{
+  display: flex;
+  flex-direction: column;
 }
+.input-filed{
+  height: 40px;
+  width:400px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 18px;
+  font-family: Tahoma, sans-serif;
+  border-radius: 8px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.submit-btn{
+  height: 45px;
+  width:405px;
+  background-color: blue;
+  color: #ffff;
+  border: none;
+  margin-top: 20px;
+  font-size: 18px;
+  font-family: Tahoma, sans-serif;
+  border-radius: 10px;
+  cursor: pointer;
 }
